--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/index.mjs",
   "types": "./dist/index.d.mts",
   "bin": {
-    "mcpdf": "./dist/index.js"
+    "mcpdf": "./dist/index.mjs"
   },
   "engines": {
     "node": ">=20.0.0"
@@ -30,13 +30,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.25.2",
     "zod": "^4.3.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/node": "^20.17.10",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
     "eslint": "^9.39.2",
+    "globals": "^17.0.0",
     "tsdown": "^0.18.4",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
