--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "typecheck": "tsc --noEmit",
-    "check": "pnpm run lint && pnpm run typecheck && pnpm run test"
+    "check": "pnpm run lint && pnpm run typecheck && pnpm run test",
+    "generate:fixtures": "tsx tests/pdfs/generator.ts"
   },
   "keywords": [
     "mcp",
@@ -31,6 +32,7 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.2",
+    "pdf-lib": "^1.17.1",
     "zod": "^4.3.4"
   },
   "devDependencies": {
@@ -38,9 +40,11 @@
     "@types/node": "^20.17.10",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
+    "@vitest/coverage-v8": "^4.0.17",
     "eslint": "^9.39.2",
     "globals": "^17.0.0",
     "tsdown": "^0.18.4",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
   }
