--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "mcpdf": "./dist/index.mjs"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=24.0.0"
   },
   "scripts": {
     "build": "tsdown",
@@ -34,6 +34,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.2",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.530",
     "zod": "^4.3.4"
   },
   "devDependencies": {
